<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_download_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/text_download_sample_video"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_download_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/text_download_sample_pdf"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:text="@string/text_url"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:hint="@string/text_url_hint"
                android:importantForAutofill="no"
                android:inputType="textUri" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:text="@string/text_file_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_file_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:hint="@string/text_file_name_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:text="@string/text_priority"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_priority"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:autofillHints="1"
                android:hint="@string/text_priority_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/text_filetype"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_file_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:outlineAmbientShadowColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="wrap_content"
            android:layout_height="?android:actionBarSize"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_download"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />
    </LinearLayout>

</layout>
